@@ -49,7 +49,7 @@ div.sphinxsidebarwrapper {
 
 div.sphinxsidebar {
     float: left;
-    width: 230px;
+    width: {{ theme_sidebarwidth|toint }}px;
     margin-left: -100%;
     font-size: 90%;
 }
