@@ -5,3 +5,4 @@ pygments_style = none
 
 [options]
 nosidebar = false
+sidebarwidth = 230
