@@ -23,7 +23,7 @@ div.documentwrapper {
 }
 
 div.bodywrapper {
-    margin: 0 230px 0 0;
+    margin: 0 {{ theme_sidebarwidth }}px 0 0;
 }
 
 div.body {
@@ -40,7 +40,7 @@ div.sphinxsidebarwrapper {
 div.sphinxsidebar {
     float: right;
     margin-left: -100%;
-    width: 230px;
+    width: {{ theme_sidebarwidth }}px;
 }
 
 div.clearer {
@@ -665,38 +665,6 @@ h1 tt, h2 tt, h3 tt, h4 tt, h5 tt, h6 tt {
 
 .versionmodified {
     font-style: italic;
-}
-
-form.comment {
-    margin: 0;
-    padding: 10px 30px 10px 30px;
-    background-color: #eee;
-}
-
-form.comment h3 {
-    background-color: #326591;
-    color: white;
-    margin: -10px -30px 10px -30px;
-    padding: 5px;
-    font-size: 1.4em;
-}
-
-form.comment input,
-form.comment textarea {
-    border: 1px solid #ccc;
-    padding: 2px;
-    font-family: sans-serif;
-    font-size: 13px;
-}
-
-form.comment input[type="text"] {
-    width: 240px;
-}
-
-form.comment textarea {
-    width: 100%;
-    height: 200px;
-    margin-bottom: 10px;
 }
 
 /* :::: PRINT :::: */
